# dwd_global_radiation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
dwd_global_radiation/: __init__.py  global_radiation.py  global_radiation_printer.py  products.py  utils.py
tests/: coordinates.ini  simple_test_global_radiation.py  test_smoke.py
