[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dwd_global_radiation"
version = "1.1.0rc6"
description = "Access and analyze DWD global radiation data and forecasts"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Arno Schmerer" }]
requires-python = ">=3.11"
keywords = [
  "weather", "meteorology", "radiation", "solar",
  "forecasting", "DWD", "climate", "solar energy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "netCDF4>=1.6.5",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "tabulate>=0.9.0",
  "tzlocal>=5.2",
  "xarray>=2024.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/aschmere/dwd_global_radiation"

[tool.hatch.build.targets.wheel]
packages = ["dwd_global_radiation"]